# LeagueAPI

./: .gitmodules  CMakeLists.txt  README.md
include/: Http.h  RiotAPI.h
src/: Http.cpp  Logger.cpp  RiotAPI.cpp  main.cpp
